# tinychacha

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_all.cpp
fuzz/: CMakeLists.txt  fuzz_aead.cpp  fuzz_aead_decrypt.cpp  fuzz_aead_structured.cpp  fuzz_backend_equivalence.cpp  fuzz_chacha20.cpp  fuzz_poly1305.cpp
include/: tinychacha.h
include/tinychacha/: aead.h  chacha20.h  common.h  poly1305.h  version.h
src/: aead.cpp  chacha20.cpp  cpu_features.h  cpuid.cpp  nonce_generate.cpp  poly1305.cpp  secure_zero.cpp
src/backend/: chacha20_avx2.cpp  chacha20_avx512.cpp  chacha20_neon.cpp  chacha20_portable.cpp  poly1305_avx2.cpp  poly1305_neon.cpp  poly1305_portable.cpp
src/internal/: chacha20_impl.h  endian.h  poly1305_impl.h
tests/: CMakeLists.txt  test_aead.cpp  test_aead_auth_failure.cpp  test_aead_backend_equivalence.cpp  test_backend_equivalence.cpp  test_chacha20.cpp  test_cpuid.cpp  test_determinism.cpp  test_fuzz.cpp  test_harness.h  test_inplace.cpp  test_main.cpp  test_nonce_generation.cpp  test_poly1305.cpp  test_primitives.cpp  test_rfc_per_backend.cpp  test_security.cpp
tests/vectors/: aead_vectors.inl  chacha20_vectors.inl  poly1305_vectors.inl
